tests/resource/valid/definition/function_with_if_and_raise.mamba
def f(x: Int) -> Int raise [Exception] =>
    if x > 10 then
        20
    else
        raise Exception("Something went wrong!")
