tests/resource/invalid/type/definition/raises_unmentioned_exception.mamba
class MyErr1 isa Exception("Something went wrong")
class MyErr2(msg: String) isa Exception(msg)

def f(x: Int) -> Int raise [MyErr1] =>
    if x < 0 then
        raise MyErr1()
    else
        if x > 10 then
            raise MyErr2("Greater than 10.")
        else
            return x + 2
